--- a/ASP.NET Core/JuniorAssign/JuniorAssign.Web/Views/Shared/_Layout.cshtml
+++ b/ASP.NET Core/JuniorAssign/JuniorAssign.Web/Views/Shared/_Layout.cshtml
@@ -26,6 +26,12 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Users" asp-action="Logout">Logout</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Contragents" asp-action="Create">Create new contagent</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Contragents" asp-action="All">View my contragents</a>
+                            </li>
                         }
                         else
                         {
