--- a/ASP.NET Core/JuniorAssign/JuniorAssign.Web/Views/Users/Login.cshtml
+++ b/ASP.NET Core/JuniorAssign/JuniorAssign.Web/Views/Users/Login.cshtml
@@ -3,7 +3,11 @@
     ViewData["Title"] = "Login";
 }
 
-<form asp-controller="Users" asp-action="Login" method="POST" class="needs-validation" novalidate>
+@if (this.TempData["InvalidLogin"] != null)
+{
+    <h3>@this.TempData["InvalidLogin"]</h3>
+}
+<form asp-controller="Users" asp-action="Login" method="POST">
     <div class="form-group">
         <label asp-for="Username"></label>
         <input asp-for="Username" class="form-control"/>
@@ -15,8 +19,8 @@
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="IsPersistent"></label>
+        <label asp-for="IsPersistent">Remember me</label>
         <input asp-for="IsPersistent" class="form-control"/>
     </div>
-    <button type="submit" class="btn btn-success">Submit</button>
+    <button type="submit" class="col-12 btn btn-success">Login</button>
 </form>
