--- a/ASP.NET Core/JuniorAssign/JuniorAssign.Web/Views/Users/Register.cshtml
+++ b/ASP.NET Core/JuniorAssign/JuniorAssign.Web/Views/Users/Register.cshtml
@@ -19,5 +19,5 @@
         <input asp-for="RepeatPassword" class="form-control" />
         <span asp-validation-for="RepeatPassword" class="text-danger"></span>
     </div>
-    <button type="submit" class="btn btn-success">Submit</button>
+    <button type="submit" class="col-12 btn btn-success">Register</button>
 </form>
